# Boot

./: Cargo.toml  README.md  ROADMAP.md
.github/workflows/: ci.yml
examples/: hello.rs
macros/: Cargo.toml
macros/src/: decorators.rs  dependency.rs  events.rs  file_upload.rs  lib.rs  messaging.rs  openapi.rs  openapi_security.rs  outside.rs  protocol.rs  schedule.rs  util.rs  validation.rs  websocket.rs
macros/src/controller/: attrs.rs  handler_arguments.rs  handlers.rs  input.rs  mod.rs  route_definition.rs  route_openapi.rs  route_validation.rs  routing.rs
macros/src/controller/attrs/: cache.rs  host.rs  http_code.rs  metadata.rs  mod.rs  openapi.rs  pipeline.rs  response.rs  serialization.rs  version.rs
src/: auth.rs  axum_adapter.rs  cache.rs  compression.rs  config.rs  cqrs.rs  database.rs  discovery.rs  error.rs  events.rs  file_upload.rs  health.rs  http_client.rs  lib.rs  logging.rs  openapi.rs  openapi_security.rs  percent.rs  queue.rs  request_context.rs  schedule.rs  security.rs  serialization.rs  session.rs  static_files.rs  testing.rs  validation.rs  versioning.rs  view.rs
src/adapters/: axum.rs  mod.rs
src/app/: application.rs  builder.rs  context.rs  factory.rs  handle.rs  lazy.rs  microservice.rs  mod.rs  registration.rs  shutdown.rs
src/cqrs/: bus.rs  context.rs  definitions.rs  erased.rs  handlers.rs  messages.rs  mod.rs  module.rs
src/http/: cookie.rs  extractor.rs  header.rs  method.rs  mod.rs  query.rs  request.rs  request_body.rs  request_cookie.rs  response.rs  response_passthrough.rs  sse.rs  streamable_file.rs
src/ilink/: auth.rs  client.rs  login.rs  messages.rs  mod.rs  tests.rs  transport.rs  types.rs  updates.rs  url_policy.rs
src/module/: dynamic.rs  mod.rs
src/pipeline/: components.rs  context.rs  filter.rs  guard.rs  interceptor.rs  middleware.rs  mod.rs  pipe.rs
src/provider/: cache.rs  context_id.rs  definition.rs  entry.rs  mod.rs  module_ref.rs  provider_ref.rs  resolution.rs  token.rs
src/routing/: controller.rs  handler.rs  host.rs  mod.rs  path.rs
src/routing/route/: builders.rs  definition.rs  execution.rs  mod.rs  openapi.rs  pipeline.rs  response.rs
src/security/: cors.rs  csrf.rs  headers.rs  http_methods.rs  mod.rs  rate_limit.rs
src/session/: handle.rs  id.rs  interceptor.rs  manager.rs  middleware.rs  mod.rs  module.rs  options.rs  store.rs
src/transport/: grpc.rs  kafka.rs  mod.rs  mqtt.rs  nats.rs  pattern.rs  rabbitmq.rs  redis.rs  tcp.rs
src/websocket/: connection.rs  context.rs  gateway.rs  handler.rs  hooks.rs  message.rs  mod.rs  pipeline.rs  server.rs  state.rs
tests/: app_enhancer_protocols.rs  app_enhancer_resolution.rs  app_enhancer_retries.rs  app_enhancer_topology.rs  app_enhancers.rs  auth.rs  axum_adapter.rs  body_field_macros.rs  cache.rs  compression.rs  config.rs  controllers.rs  cookie_macros.rs  cqrs.rs  database.rs  decorator_composition_macros.rs  discovery.rs  events.rs  file_upload.rs  file_upload_macros.rs  framework.rs  health.rs  http.rs  http_client.rs  lazy_modules.rs  lifecycle.rs  logging.rs  macros.rs  message_controller_contexts.rs  module_registration.rs  openapi.rs  openapi_security_macros.rs  pipeline.rs  provider_contexts.rs  providers.rs  queue.rs  request_context.rs  response_passthrough_macros.rs  routing.rs  schedule.rs  (+12 more)
