[package]
name = "a3s-boot"
version = "0.1.0"
edition = "2021"
authors = ["A3S Lab"]
license = "MIT"
description = "Adapter-first modular Rust web framework for A3S inspired by Nest.js"
repository = "https://github.com/A3S-Lab/Boot"
documentation = "https://docs.rs/a3s-boot"
readme = "README.md"
keywords = ["web", "framework", "modular", "nest", "adapter"]
categories = ["web-programming", "asynchronous"]

[lib]
name = "a3s_boot"
path = "src/lib.rs"

[features]
default = ["axum", "macros"]
axum = ["dep:axum", "dep:http-body-util", "dep:tokio"]
macros = ["dep:a3s-boot-macros"]

[dependencies]
a3s-boot-macros = { version = "0.1.0", path = "macros", optional = true }
axum = { version = "0.8", optional = true }
futures-core = "0.3"
futures-util = "0.3"
http-body-util = { version = "0.1", optional = true }
percent-encoding = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["net"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }

[[example]]
name = "hello"
path = "examples/hello.rs"
required-features = ["axum"]
