[package]
name = "a3s-boot"
version = "0.1.0"
edition = "2021"
authors = ["A3S Lab"]
license = "MIT"
description = "Adapter-first modular Rust web framework for A3S inspired by Nest.js"
repository = "https://github.com/A3S-Lab/Boot"
documentation = "https://docs.rs/a3s-boot"
readme = "README.md"
keywords = ["web", "framework", "modular", "nest", "adapter"]
categories = ["web-programming", "asynchronous"]

[lib]
name = "a3s_boot"
path = "src/lib.rs"

[features]
default = ["axum", "macros"]
axum = ["dep:axum", "dep:http-body-util", "dep:tokio"]
cache = []
compression = ["dep:flate2"]
config = ["dep:a3s-acl"]
events = []
file-upload = ["dep:bytes", "dep:multer"]
health = []
logging = []
macros = ["dep:a3s-boot-macros"]
openapi-schemas = ["dep:schemars"]
queue = ["dep:tokio"]
kafka-transport = ["dep:chrono", "dep:rskafka", "dep:tokio"]
mqtt-transport = ["dep:rumqttc", "dep:tokio"]
nats-transport = ["dep:async-nats", "dep:tokio"]
rabbitmq-transport = ["dep:lapin", "dep:tokio"]
redis-transport = ["dep:redis", "dep:tokio"]
schedule = ["dep:chrono", "dep:cron", "dep:tokio"]
security = []
session = ["dep:getrandom"]
tcp-transport = ["dep:tokio"]

[dependencies]
a3s-acl = { version = "0.2.1", optional = true }
a3s-boot-macros = { version = "0.1.0", path = "macros", optional = true }
async-nats = { version = "0.49.1", default-features = false, optional = true }
axum = { version = "0.8", features = ["ws"], optional = true }
bytes = { version = "1", optional = true }
chrono = { version = "0.4", optional = true }
cron = { version = "0.17.0", optional = true }
flate2 = { version = "1", optional = true }
futures-core = "0.3"
futures-util = "0.3"
getrandom = { version = "0.2", optional = true }
http-body-util = { version = "0.1", optional = true }
lapin = { version = "4.10.0", default-features = false, features = ["tokio"], optional = true }
multer = { version = "3", optional = true }
percent-encoding = "2"
redis = { version = "1.3.0", default-features = false, features = ["tokio-comp"], optional = true }
rskafka = { version = "0.6.0", default-features = false, optional = true }
rumqttc = { version = "0.25.1", default-features = false, optional = true }
schemars = { version = "1", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["io-util", "net", "rt", "sync", "time"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }

[[example]]
name = "hello"
path = "examples/hello.rs"
required-features = ["axum"]
